[package]
name = "gritlab"
version = "0.1.0"
edition = "2021"
authors = ["Ao Chen <chenao3220@gmail.com>"]
license = "MIT"
description = "Gitlab rust API sdk"
homepage = "https://github.com/chenaoxd/gritlab"
documentation = "https://docs.rs/gritlab"
readme = "README.md"
keywords = ["gitlab", "sdk", "async"]
categories = ["api-bindings", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
